# apps/api/src/app.module.ts
@@ -25,6 +25,7 @@ import { BookingsModule } from './modules/bookings/bookings.module';
 import { BookingRequestsModule } from './modules/booking-requests/booking-requests.module';
 import { PhoneVerificationModule } from './modules/phone-verification/phone-verification.module';
 import { FinanceModule } from './modules/finance/finance.module';
+import { PaymentsModule } from './modules/payments/payments.module';
 import { MembersModule } from './modules/members/members.module';
 import { ReviewModule } from './modules/review/review.module';
 import { ChatModule } from './modules/chat/chat.module';
@@ -69,6 +70,7 @@ import { PlatformAdminModule } from './modules/platform-admin/platform-admin.mod
     BookingRequestsModule,
     PhoneVerificationModule,
     FinanceModule,
+    PaymentsModule,
     MembersModule,
     ReviewModule,
     ChatModule,
